--- a/README.rdoc
+++ b/README.rdoc
@@ -1,13 +1,10 @@
 == bnw.io
 
 This is an example application, corresponding to a tutorial posted on bnw.io
-View the tutorial here
+View the tutorial at:
+
+[Ecommerce on rails part 1, rspec, bdd, factory girl](http://bnw.io/ecommerce-on-rails-rspec-and-bdd/)
 
 ## All bnw.io Tutorials
 
-* bnw_ecom_tutorial1
-
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* [Ecommerce on rails part 1, rspec, bdd, factory girl](http://bnw.io/ecommerce-on-rails-rspec-and-bdd/)
